option('target', type: 'combo', choices: ['', 'Kindle', 'Kobo', 'reMarkable'], description: 'Target platform.', yield: true)

# Features.
option('bitmap'     , type: 'feature')
option('button-scan', type: 'feature')
option('draw'       , type: 'feature')
option('fonts'      , type: 'feature')
option('image'      , type: 'feature')
option('opentype'   , type: 'feature')

# Programs.
option('fbdepth', type: 'feature')
option('fbink'  , type: 'feature')
